Prepare it for AOT

--- a/ZeroReflection.Benchmarks/ZeroReflection.Benchmarks.csproj
+++ b/ZeroReflection.Benchmarks/ZeroReflection.Benchmarks.csproj
@@ -6,6 +6,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
+        <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+        <RootNamespace>ZeroReflection.Benchmarks</RootNamespace>
+        <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
+        <RunAnalyzersDuringLiveAnalysis>true</RunAnalyzersDuringLiveAnalysis>
+        <!-- NativeAOT -->
+        
     </PropertyGroup>
 
     <ItemGroup>
