--- a/ZeroReflection.Mapper.Tests/ZeroReflection.Mapper.Tests.csproj
+++ b/ZeroReflection.Mapper.Tests/ZeroReflection.Mapper.Tests.csproj
@@ -20,7 +20,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ZeroReflection.Mapper\ZeroReflection.Mapper.csproj" OutputItemType="Analyzer" PrivateAssets="all" />
+        <ProjectReference Include="..\ZeroReflection.Mapper\ZeroReflection.Mapper.csproj" />
+        <ProjectReference Include="..\ZeroReflection.MapperGenerator\ZeroReflection.MapperGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
