--- a/ZeroReflection.Mapper/ZeroReflection.Mapper.csproj
+++ b/ZeroReflection.Mapper/ZeroReflection.Mapper.csproj
@@ -2,10 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <OutputItemType>Analyzer</OutputItemType>
-        <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <VersionPrefix>1.0.0</VersionPrefix>
+        <VersionPrefix>1.0.3</VersionPrefix>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <PackageId>ZeroReflection.Mapper</PackageId>
         <Authors>Younes Baghaei Moghaddam</Authors>
@@ -15,26 +13,18 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/younos1986/ZeroReflection</PackageProjectUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
-
-        <!-- SOURCE GENERATOR IMPORTANT SETTINGS -->
-        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-        <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-        <IsRoslynComponent>true</IsRoslynComponent>
         <LangVersion>latest</LangVersion>
+
+		<SolutionDir Condition="'$(SolutionDir)' == ''">$(MSBuildProjectDirectory)\</SolutionDir>
+		<PackageOutputPath>$(SolutionDir)artifacts\bin\</PackageOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" PrivateAssets="all" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
-    <!-- This ensures the library will be packaged as a source generator when we use `dotnet pack` -->
     <ItemGroup>
-        <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Content Include="README.md" Pack="true" PackagePath="" />
+        <None Include="README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
 </Project>
