--- a/ZeroReflection.Mapper/ZeroReflection.Mapper.csproj
+++ b/ZeroReflection.Mapper/ZeroReflection.Mapper.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <Nullable>enable</Nullable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.3</VersionPrefix>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -25,6 +27,7 @@
 
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\" />
+        <None Remove="ZeroReflection.Mapper.csproj.DotSettings" />
     </ItemGroup>
 
 </Project>
