--- a/ZeroReflection.MediatorGenerator/ZeroReflection.MediatorGenerator.csproj
+++ b/ZeroReflection.MediatorGenerator/ZeroReflection.MediatorGenerator.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <Nullable>enable</Nullable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <OutputItemType>Analyzer</OutputItemType>
         <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
